--- a/RFS_Project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/RFS_Project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -130,7 +130,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/StarterContent/Maps/Minimal_Default
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
