Intermediate folder removal

--- a/RFS_Project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/RFS_Project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -130,14 +130,14 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/StarterContent/Maps/Minimal_Default
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [RootWindow]
 ScreenPosition=X=362.400 Y=180.000
-WindowSize=X=1286.400 Y=726.400
+WindowSize=X=1288.000 Y=728.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -154,7 +154,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Uni Lab Work/DES310/RockFlockStudios-Prof-Project/RFS_Project/Content/FirstPerson/Maps
+UNR=../../../../../../Uni Lab Work/DES310/RockFlockStudios-Prof-Project/RFS_Project/Content/StarterContent/Maps
 BRUSH=../../../../../../Uni Lab Work/RFS_Project/Content/
 FBX=../../../../../../Uni Lab Work/RFS_Project/Content/
 FBXAnim=../../../../../../Uni Lab Work/RFS_Project/Content/
@@ -1062,7 +1062,8 @@ LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
-MRUItem0=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem0=/Game/StarterContent/Maps/Minimal_Default
+MRUItem1=/Game/FirstPerson/Maps/FirstPersonMap
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
