Creation of Controller & Agent Classes
Both the controller and agent now have c++ parents that will begin to have the functionality moved to from the blueprints.

--- a/RFS_Project/RFS_Project.uproject
+++ b/RFS_Project/RFS_Project.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.0",
+	"EngineAssociation": "{C47AB76B-4EBF-C427-31BB-92938CF74AD9}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
@@ -9,7 +9,8 @@
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
-				"Engine"
+				"Engine",
+				"AIModule"
 			]
 		}
 	],
