Mnaged to Linnk Sounbanks
event is now put into Ben Audio, if possible use event to test to see if you can hear it from your end

--- a/RFS_Project/Config/DefaultGame.ini
+++ b/RFS_Project/Config/DefaultGame.ini
@@ -10,7 +10,7 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 [/Script/AkAudio.AkSettings]
 MaxSimultaneousReverbVolumes=4
 WwiseProjectPath=(FilePath="RFS_Project_WwiseProject/RFS_Project_WwiseProject.wproj")
-GeneratedSoundBanksFolder=(Path="")
+GeneratedSoundBanksFolder=(Path="BenAudio")
 WwiseStagingDirectory=(Path="WwiseAudio")
 bSoundBanksTransfered=True
 bAssetsMigrated=True
