Basic AIBotController Code In

--- a/RFS_Project/RFS_Project.uproject
+++ b/RFS_Project/RFS_Project.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{C47AB76B-4EBF-C427-31BB-92938CF74AD9}",
+	"EngineAssociation": "5.0",
 	"Category": "",
 	"Description": "",
 	"Modules": [
