Update .gitignore for binary files

--- a/RFS_Project/.gitignore
+++ b/RFS_Project/.gitignore
@@ -48,6 +48,8 @@ SourceArt/**/*.tga
 # Builds
 Build/*
 
+Binaries/*
+
 # Whitelist PakBlacklist-<BuildConfiguration>.txt files
 !Build/*/
 Build/*/**
