28/02/23 VFX_Wall_Test
Animation is done.
Current issues: FX disappear after the build

--- a/RFS_Project/Config/DefaultEngine.ini
+++ b/RFS_Project/Config/DefaultEngine.ini
@@ -1,10 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+GameDefaultMap=/Game/VFX_Ilya/Test_Level_v7.Test_Level_v7
 
 
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/VFX_Ilya/Test_Level_v7.Test_Level_v7
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -41,4 +41,9 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/SubstanceCore.SubstanceSettings]
+DefaultSubstanceOutputSizeX=SIZE_2048
+DefaultSubstanceOutputSizeY=SIZE_2048
+AsyncLoadMipClip=4
 
