--- a/RFS_Project/Config/DefaultGame.ini
+++ b/RFS_Project/Config/DefaultGame.ini
@@ -55,7 +55,7 @@ BuildConfiguration=PPBC_Development
 BuildTarget=
 LaunchOnTarget=
 StagingDirectory=(Path="")
-FullRebuild=False
+FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
