Shadow Ability Improvement
Improved the shadow ability to work better with entering walls

--- a/RFS_Project/Config/DefaultEngine.ini
+++ b/RFS_Project/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/VFX_Ilya/Test_Level_v7.Test_Level_v7
+GameDefaultMap=/Game/Game/Environments/Grebox_Prototype_01.Grebox_Prototype_01
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Game/Tools/PlaytestGameMode.PlaytestGameMode_C
 GlobalDefaultServerGameMode=None
