--- a/RFS_Project/Config/DefaultEngine.ini
+++ b/RFS_Project/Config/DefaultEngine.ini
@@ -32,6 +32,7 @@ r.Shadow.Virtual.Enable=1
 r.PostProcessing.PropagateAlpha=0
 r.DefaultFeature.MotionBlur=False
 r.ReflectionCaptureResolution=16
+r.AntiAliasingMethod=1
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
