--- a/RFS_Project/Config/DefaultEngine.ini
+++ b/RFS_Project/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default.Minimal_Default
+EditorStartupMap=/Game/Game/Environments/Grebox_Prototype_01.Grebox_Prototype_01
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
