Ability Expose and Wall Switching
Ability switching now uses LMB,RMB,A and D. With Right trigger and left trigger on gamepad
Ability parameters for Wall information has been exposed via functions.

--- a/RFS_Project/Config/DefaultInput.ini
+++ b/RFS_Project/Config/DefaultInput.ini
@@ -92,6 +92,12 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="AbilityOneSelect",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Left)
 +ActionMappings=(ActionName="AbilityTwoSelect",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Two)
 +ActionMappings=(ActionName="AbilityTwoSelect",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Right)
++ActionMappings=(ActionName="Switch Wall Left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Switch Wall Left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftTrigger)
++ActionMappings=(ActionName="Switch Wall Right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
++ActionMappings=(ActionName="Switch Wall Right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightTrigger)
++ActionMappings=(ActionName="Switch Wall Left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
++ActionMappings=(ActionName="Switch Wall Right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
 +AxisMappings=(AxisName="Look Up / Down Gamepad",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="Look Up / Down Mouse",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="Move Forward / Backward",Scale=-1.000000,Key=Down)
