--- a/RFS_Project/Config/DefaultEngine.ini
+++ b/RFS_Project/Config/DefaultEngine.ini
@@ -33,13 +33,15 @@ r.PostProcessing.PropagateAlpha=0
 r.DefaultFeature.MotionBlur=False
 r.ReflectionCaptureResolution=128
 r.AntiAliasingMethod=1
-r.DefaultFeature.AutoExposure.Bias=0.081825
-r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.AutoExposure.Bias=10.000000
+r.DefaultFeature.AutoExposure=True
 r.RayTracing.Skylight=True
 r.RayTracing=False
 r.DefaultFeature.AutoExposure.Method=2
 r.ReflectionEnvironmentLightmapMixBasedOnRoughness=False
 r.Lumen.TraceMeshSDFs=1
+r.CustomDepth=3
+r.SeparateTranslucency=True
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
