Change Text to One-Sided Texture

--- a/RFS_Project/Config/DefaultEngine.ini
+++ b/RFS_Project/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Alice_Level/tutorial_map.tutorial_map
+GameDefaultMap=/Game/Alice_Level/main_map.main_map
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Game/Tools/PlaytestGameMode.PlaytestGameMode_C
 GlobalDefaultServerGameMode=None
